@@ -8,6 +8,7 @@ t/00-load.t
 t/05-base.t
 t/10-shared.t
 t/12-ipc_shareable.t
+t/14-partial_second.t
 t/15-interval.t
 t/16-once.t
 t/20-restart.t
