@@ -16,6 +16,7 @@ t/30-status.t
 t/35-timeout.t
 t/40-event_crash.t
 t/45-params.t
+t/50-info_events.t
 t/manifest.t
 t/pod-coverage.t
 t/pod.t
