@@ -7,6 +7,7 @@ Revision history for Fork-Event-Interval
     - Added info() object method; returns an href of details about the event
     - Added shared_scalar() object method; Returns a reference to a scalar
       that resides in shared memory. We use IPC::Shareable for the backend
+    - Fixed issue where fractional seconds weren't being honoured
 
 1.02    2021-04-15
     - Updated shared data example to be a scalar
